cluster/apps/pihole2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  type: LoadBalancer
  loadBalancerIP: 10.1.1.30
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
