cluster/apps/pihole2/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
  namespace: pihole2
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole2.alvaronl.com`)
      kind: Rule
      priority: 10
      services:
        - name: http
          port: 80
